--- a/index.css
+++ b/index.css
@@ -10,6 +10,7 @@ header {
   overflow: hidden;
 }
 .gameContainer {
+  position: relative;
   width: 500px;
   margin: 80px auto;
 }
@@ -101,16 +102,17 @@ footer {
   z-index: 2;
 }
 .mes {
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
+  width: 500px;
+  height: 500px;
+  top: 230px;
   left: 0;
   background: rgba(0, 9, 19, 0.6);
+  border-radius: 10px;
   z-index: 10;
 }
 .mes h1 {
@@ -149,7 +151,7 @@ footer {
   }
   .score-num {
     font-size: 23px;
-  }  
+  }
   .newGame {
     width: 280px;
     margin: 0;
@@ -167,6 +169,11 @@ footer {
     width: 57.5px;
     height: 57.5px;
     line-height: 57.5px;
+  }
+  .mes {
+    width: 280px;
+    height: 280px;
+    top: 150px;
   }
   .mes h1 {
     font-size: 30px;
