--- a/index.css
+++ b/index.css
@@ -102,7 +102,7 @@ footer {
   z-index: 2;
 }
 .mes {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   flex-direction: column;
